# depict

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt  run.py
py/: __init__.py  config.py  main.py  printhelp.py  util.py
py/commands/: __init__.py  alpha.py  backup.py  compress.py  flip.py  grayscale.py  invert.py  resize.py  scale.py  trim.py
py/input/: __init__.py  args.py  dirwalk.py  filters.py  paths.py  process.py
py/input/processing/: __init__.py  gif.py  image.py  video.py
src/: cli.rs  config.rs  github.rs  lib.rs  main.rs  paths.rs
src/cli/: args.rs  commands.rs  mod.rs  parser.rs  run.rs
src/cli/run/: backup.rs  image.rs  mod.rs  system.rs
src/config/: display.rs  edit.rs  json.rs  mod.rs  settings.rs
src/paths/: extract.rs  getpath.rs
src/update/: install.rs  mod.rs  updater.rs  versions.rs
updater/: Cargo.toml
updater/src/: main.rs
