[package]
name = "depict"
version = "1.3.0"
edition = "2024"
authors = ["tousef_refuge"]
description = "A command-line tool to quickly and recursively edit image files within a directory"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo"] }
colored = "3.1.1"

reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
zip = "8.5.1"
serde_json = "1.0.149"

[features]
debug = []